--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="dist/css/style.css" />
+    <link rel="stylesheet" href="dist/css/style.css" />
   </head>
 
   <body>
