WIP linting scss

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html>
-
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="dist/css/style.css" />
@@ -10,5 +9,4 @@
   <body>
     <!-- Start Templating! -->
   </body>
-
 </html>
